--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,1 +1,11 @@
-Welcome to Pro Stack
+<html>
+<head>	
+	<!-- head has only 5 tags -->
+	<!-- title, meta, style,link, script -->
+	<title>First Web Page</title>
+</head>
+<body>
+	<h1>Welcome to HTML</h1>
+	<vamsi>Welcome to HTML	</vamsi>
+</body>
+</html>
